

                 SCons - a software construction tool

                            Change Log


RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Gary Oberbrunner:
    - Adding None to an Action no longer fails (just returns original action)

  From Gary Oberbrunner:
    - New --debug=prepare option to show each target as it's being
      prepared, whether or not anything needs to be done for it.

  From Gary Oberbrunner:
    - New debug option --debug=duplicate to print a line for each
      unlink/relink (or copy) of a variant file from its source file.
    
  From David Garcia Garzon:
    - Fix Delete to be able to delete broken symlinks and dir
      symlinks.
  
  From Robert Lehr:
    - Handle .output file generated by bison/yacc properly. Cleaning it
      when necessary.

  From Antoine Dechaume:
    - Handle SWIG file where there is whitespace after the module name
      properly. Previously the generated files would include 
      the whitespace.

  From Gary Oberbrunner:
    - Improve error message for EnumVariables to show legal values.

  From Gary Oberbrunner:
    - Fix Intel compiler to sort versions >9 correctly (esp. on Linux)

  From Dmitry R.:
    - Handle Environment in case __semi_deepcopy is None

  From Benoit Belley:

    - Much improved support for Windows UNC paths (\\SERVERNAME).

  From Gary Oberbrunner:

    - Fix Install() when the source and target are directories and the
      target directory exists.

  From Jean-Baptiste Lab:

    - Fix problems with appending CPPDEFINES that contain
      dictionaries, and related issues with Parse/MergeFlags and
      CPPDEFINES.

  From Allen Weeks:

    - Fix for an issue with implicit-cache with multiple targets
      when dependencies are removed on disk.

  From Evgeny Podjachev and Alexey Petruchick:

    - Support generation of Microsoft Visual Studio 2008 (9.0) 
      and 2010 (10.0) project and solution files.

  From Ken Deeter:
